# easyTemplateLib

./: example.py  pyproject.toml
Example/: example1.py
Example/Example1/Calculators/: calculator1.py  calculator2.py
Example/Example1/Interfaces/: interface1.py
Example/Example2/: Line.py  interface.py
Example/Example2/Interfaces/: __init__.py  interface2.py
easyTemplateLib/Example/: interface.py
easyTemplateLib/Example/Interfaces/: __init__.py  interface1.py  interface2.py  interfaceTemplate.py
